Fixed navbar/jumbotron spacing to remove the space from top

--- a/static/style.css
+++ b/static/style.css
@@ -67,6 +67,7 @@ button:hover, a:hover {
     background-repeat: no-repeat;
     background-position: center center;
     box-shadow: 5px 10px;
+    margin-top: -20px;
 }
 
 /* Date dropdown bar on the homepage-- centers it and makes it smaller */
